@@ -59,9 +59,27 @@ sound_force_8bit, boolean, 0
 joystick_1, string, NULL, 'j'
 joystick_1_output, numeric, 0
 joystick_1_fire_1, numeric, 4096
+joystick_1_fire_2, numeric, 4096
+joystick_1_fire_3, numeric, 4096
+joystick_1_fire_4, numeric, 4096
+joystick_1_fire_5, numeric, 4096
+joystick_1_fire_6, numeric, 4096
+joystick_1_fire_7, numeric, 4096
+joystick_1_fire_8, numeric, 4096
+joystick_1_fire_9, numeric, 4096
+joystick_1_fire_10, numeric, 4096
 joystick_2, string, NULL
 joystick_2_output, numeric, 0
 joystick_2_fire_1, numeric, 4096
+joystick_2_fire_2, numeric, 4096
+joystick_2_fire_3, numeric, 4096
+joystick_2_fire_4, numeric, 4096
+joystick_2_fire_5, numeric, 4096
+joystick_2_fire_6, numeric, 4096
+joystick_2_fire_7, numeric, 4096
+joystick_2_fire_8, numeric, 4096
+joystick_2_fire_9, numeric, 4096
+joystick_2_fire_10, numeric, 4096
 joystick_keyboard_output, numeric, 0
 
 rzx_compression, boolean, 0,, compress-rzx
