@@ -919,3 +919,5 @@
 20040610 ay.c: add 'return 0' to the end of ay_to_snapshot.
 20040610 ui/gtk/roms.c: improve user interface a bit.
 20040610 ui/gtk/gtkjoystick.c: improve user interface a bit.
+20040611 settings.dat,ui/gtk/gtkjoystick.c: allow up to 10 buttons per
+	 joystick, and improve user interface for changing these.
